--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </script>
 </head>
 <body>
-    <embed src="Resume-EnzeShi01.pdf" type="application/pdf" width="100%" height="100%">
+    <embed src="Resume-EnzeShi.pdf" type="application/pdf" width="100%" height="100%">
 </body>
 </html>
